--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head class="site-head">
   <div class="image-div">
-    <a href="/ProdiginousCreations/index.html"> <img src="../Images/Website_Header.jpg" alt="Prodiginous Creations"></a>
+    <a href="/ProdiginousCreations/index.html"> <img src="../ProdiginousCreations/Images/Website_Header.jpg" alt="Prodiginous Creations"></a>
   </div>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
