--- a/css/main.scss
+++ b/css/main.scss
@@ -57,6 +57,20 @@ ol.skills-list {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 26px;
 }
+/****************************
+******* welcome.html *******
+****************************/
+body.welcome{
+  background-image: url("../Images/Website-Intro.png");
+}
+div.welcome {
+  text-align: center;
+  margin-top: 20px;
+  margin: 10px auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
