--- a/css/main.scss
+++ b/css/main.scss
@@ -60,12 +60,13 @@ ol.skills-list {
 /****************************
 ******* welcome.html *******
 ****************************/
+****************************/
 div.welcome {
   text-align: center;
   margin-top: 20px;
   margin: 10px auto;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 50%;
+  max-height: 50%;
 }
 
 // Our variables
