css doesn't work?

--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,7 @@ ol.skills-list {
 /****************************
 ******* welcome.html *******
 ****************************/
-#welcome-image{
+#image{
   position: absolute;
   top: 0;
   left: 0;
